--- a/pilgrimfy/pom.xml
+++ b/pilgrimfy/pom.xml
@@ -4,7 +4,7 @@
   xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
   <modelVersion>4.0.0</modelVersion>
 
-  <groupId>ISO2.2022.A02</groupId>
+  <groupId>org.teamA02.iso</groupId>
   <artifactId>pilgrimfy</artifactId>
   <version>0.0.0-SNAPSHOT</version>
 
